# chat-bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: config.py  exceptions.py  logger.py
app/controllers/: document_controller.py  query_controller.py
app/core/: config.py
app/models/: request_models.py  response_models.py
app/routes/: dependencies.py  document_routes.py  query_routes.py
app/services/: chat_memory_service.py  pdf_service.py  vector_store_service.py
app/services/ai/: chunking_service.py  embeddings_service.py  llm_service.py
app/services/tools/: news_tool.py  weather_tool.py
app/tests/: user_test.py
data/chroma_db/c178e9af-5602-4f73-bb64-79205ec62d15/: index_metadata.pickle
frontend/: main.py
